@@ -2,7 +2,9 @@
  * Changed glint_global_interp to use global grid types to define
    input and output grids
  * Changed glint_example ncdf handling code to use global grid types
-
+ * Changed glint_global_interp to real(rk)
+ * Generally simplified glint_example and tidied it up
+	
 2005-03-23 Ian Rutt
  * Extended length of variables used to construct log messages to 150
    chars
